# MaxFlow-Review-Scheduler

Code/: CMakeLists.txt  main.cpp
Code/include/data_structure/: UFDS.h
Code/include/logic/: ConferenceManager.h  Edmonds-Karp.h  FlowAlgorithms.h
Code/include/model/: Assignment.h  Reviewer.h  Submission.h
Code/include/parser/: CSVReader.h  Config.h
Code/include/ui/: Menu.h
Code/src/data_structure/: UFDS.cpp
Code/src/logic/: Edmonds-Karp.cpp
Code/src/ui/: Menu.cpp
Project1SampleDatasets/input/: .~lock.dataset1.csv#
